# gim30

./: .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  package.xml
include/: interface.h
include/gim30/: gim30_node.hpp  gim30_node_calculate.hpp  gim30_node_control.hpp  gim30_node_get3d.hpp  gim30_node_gimbal.hpp  gim30_node_urg.hpp
include/urg_library-1.1.8/include/: urg_sensor.h  urg_serial.h
include/urg_library-1.1.8/src/: urg_sensor.c  urg_serial.c  urg_serial_linux.c  urg_serial_utils.c
launch/: gim30.launch
src/: gim30_node.cpp  gim30_node_functions.cpp  gim30_node_wrapper.cpp  main.cpp
src/Interface/: #interface.cpp#  interface.cpp
test/: gim30_launch_test.xml
