<?xml version="1.0"?>
<package>
  <name>gim30</name>
  <version>1.0.0</version>
  <description>The gim30 package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/RyodoTanaka/gim30</url>
  
  <author email="groadpg@gmail.com">RyodoTanaka</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslaunc</run_depend>
</package>
